textwire/testdata/good/before/reserve-inside-slot/layout.tw
<head>@component('comp')@slot@reserve('title')@end@end</head>