textwire/testdata/bad/duplicate-reserves/base.tw
@reserve('title')
@reserve('content')
@reserve('title')